--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,24 @@ body {
   margin: 0;
 }
 
-.intro {
+.page-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 100vh;
+}
+
+.page {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -18,6 +35,23 @@ body {
           align-items: center;
 }
 
+.intro {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 50px;
+}
+
 .intro__header-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -29,9 +63,44 @@ body {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+.intro__logo {
+  width: 120px;
+}
+
+.intro__nav-menu {
+  margin-left: auto;
+}
+
+.intro__link {
+  color: #070439;
+  font-family: "Open Sans", sans-serif;
+  font-size: 15.5px;
+  text-decoration: none;
+  max-width: 520px;
+  letter-spacing: 0.5px;
+  line-height: 25px;
+  font-weight: 400;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 0.7px;
+  margin: 0 20px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.intro__link--bold {
+  font-weight: 700;
+}
+
+.intro__link:hover {
+  cursor: pointer;
+  opacity: 0.5;
 }
 
 .intro__img-text-container {
@@ -66,6 +135,109 @@ body {
           align-items: flex-start;
 }
 
+.intro__heading {
+  color: colors(Very-dark-blue);
+  font-family: "Raleway", sans-serif;
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 50px;
+  margin: 0;
+}
+
+.intro__paragraph {
+  color: #070439;
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+  text-decoration: none;
+  max-width: 520px;
+  letter-spacing: 0.5px;
+  line-height: 25px;
+  font-weight: 400;
+  margin: 20px 0 25px;
+}
+
+.intro__paragraph--bold {
+  font-weight: 700;
+}
+
+.intro__form-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.intro__email-input-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.intro__email-input {
+  width: 300px;
+  border: 1px solid #070439;
+  border-radius: 2px;
+  padding: 10px;
+}
+
+.intro__error-msg {
+  color: #ff0000;
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  opacity: 0.85;
+  margin: 7px 0 0;
+}
+
+.intro__error-msg--visible {
+  display: block;
+}
+
+.intro__error-msg--hidden {
+  display: none;
+}
+
+.intro__submit-input {
+  background-color: #3065f8;
+  color: #f6f6fe;
+  width: 170px;
+  height: 39px;
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+  font-size: 12.5px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  border: none;
+  border-radius: 2px;
+  padding: 10px 0;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  margin-left: 15px;
+}
+
+.intro__submit-input:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
 .intro__img-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -80,6 +252,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.intro__img {
+  width: 600px;
 }
 
 .testimonial {
