--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,18 @@
 // VARIABLES //////////////////////////
 
+$colors: (
+  Very-dark-blue: hsl(243, 87%, 12%),
+  Desaturated-blue: hsl(238, 22%, 44%),
+  Bright-blue: hsl(224, 93%, 58%),
+  Moderate-cyan: hsl(170, 45%, 43%),
+  Light-grayish-blue: hsl(240, 75%, 98%),
+  Light-gray: hsl(0, 0%, 75%),
+  Red: #ff0000,
+);
+
+$heading-font: "Raleway", sans-serif;
+$body-font: "Open Sans", sans-serif;
+
 ///////////////////////////////////////
 // MIXINS /////////////////////////////
 
@@ -10,8 +23,73 @@
   align-items: $align;
 }
 
+@mixin heading($heading-font-size: 35px) {
+  color: colors(Very-dark-blue);
+  font-family: $heading-font;
+  font-size: $heading-font-size;
+  font-weight: 700;
+  line-height: 50px;
+  margin: 0;
+}
+
+@mixin paragraph($paragraph-font-size: 15px) {
+  color: color(Very-dark-blue);
+  font-family: $body-font;
+  font-size: $paragraph-font-size;
+  text-decoration: none;
+  max-width: 520px;
+  letter-spacing: 0.5px;
+  line-height: 25px;
+  font-weight: 400;
+
+  &--bold {
+    font-weight: 700;
+  }
+}
+
+@mixin btn() {
+  background-color: color(Bright-blue);
+  color: color(Light-grayish-blue);
+  width: 170px;
+  height: 39px;
+  text-align: center;
+  font-family: $heading-font;
+  font-size: 12.5px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  border: none;
+  border-radius: 2px;
+  padding: 10px 0;
+  transition: 0.2s;
+
+  &:hover {
+    cursor: pointer;
+    opacity: 0.8;
+  }
+}
+
+@mixin error-msg() {
+  color: color(Red);
+  font-family: $body-font;
+  font-size: 12px;
+  opacity: 0.85;
+  margin: 7px 0 0;
+
+  &--visible {
+    display: block;
+  }
+
+  &--hidden {
+    display: none;
+  }
+}
+
 ///////////////////////////////////////
 // FUNCTIONS //////////////////////////
+
+@function color($color-name) {
+  @return map-get($colors, $color-name);
+}
 
 ///////////////////////////////////////
 // STYLES /////////////////////////////
@@ -20,11 +98,44 @@ body {
   margin: 0;
 }
 
+.page-container {
+  @include flex(row, center, center);
+  min-height: 100vh;
+}
+
+.page {
+  @include flex(column, flex-start, center);
+}
+
 .intro {
   @include flex(column, flex-start, center);
+  padding: 50px;
 
   &__header-container {
-    @include flex(row, flex-start, flex-start);
+    @include flex(row, flex-start, center);
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  &__logo {
+    width: 120px;
+  }
+
+  &__nav-menu {
+    margin-left: auto;
+  }
+
+  &__link {
+    @include paragraph(15.5px);
+    font-family: $heading-font;
+    letter-spacing: 0.7px;
+    margin: 0 20px;
+    transition: 0.2s;
+
+    &:hover {
+      cursor: pointer;
+      opacity: 0.5;
+    }
   }
 
   &__img-text-container {
@@ -35,8 +146,45 @@ body {
     @include flex(column, flex-start, flex-start);
   }
 
+  &__heading {
+    @include heading();
+  }
+
+  &__paragraph {
+    @include paragraph();
+    margin: 20px 0 25px;
+  }
+
+  &__form-container {
+    @include flex(row, flex-start, flex-start);
+  }
+
+  &__email-input-container {
+    @include flex(column, flex-start, flex-start);
+  }
+
+  &__email-input {
+    width: 300px;
+    border: 1px solid color(Very-dark-blue);
+    border-radius: 2px;
+    padding: 10px;
+  }
+
+  &__error-msg {
+    @include error-msg();
+  }
+
+  &__submit-input {
+    @include btn();
+    margin-left: 15px;
+  }
+
   &__img-container {
     @include flex(column, flex-start, center);
+  }
+
+  &__img {
+    width: 600px;
   }
 }
 
