--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ body {
   line-height: 25px;
   font-weight: 400;
   font-family: "Raleway", sans-serif;
-  letter-spacing: 0.7px;
+  letter-spacing: 0.5px;
   margin: 0 20px;
   -webkit-transition: 0.2s;
   transition: 0.2s;
@@ -138,7 +138,7 @@ body {
 .intro__heading {
   color: colors(Very-dark-blue);
   font-family: "Raleway", sans-serif;
-  font-size: 35px;
+  font-size: 37px;
   font-weight: 700;
   line-height: 50px;
   margin: 0;
@@ -272,6 +272,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #f6f6fe;
+  width: 100%;
+  padding: 90px 0;
 }
 
 .testimonial__img-text-container {
@@ -301,9 +304,60 @@ body {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-right: 50px;
+}
+
+.testimonial__heading {
+  color: colors(Very-dark-blue);
+  font-family: "Raleway", sans-serif;
+  font-size: 37px;
+  font-weight: 700;
+  line-height: 50px;
+  margin: 0;
+  margin-bottom: 35px;
+}
+
+.testimonial__paragraph {
+  color: #070439;
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+  text-decoration: none;
+  max-width: 520px;
+  letter-spacing: 0.5px;
+  line-height: 25px;
+  font-weight: 400;
+  margin: 0 0 15px;
+}
+
+.testimonial__paragraph--bold {
+  font-weight: 700;
+}
+
+.testimonial__link {
+  color: #070439;
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+  text-decoration: none;
+  max-width: 520px;
+  letter-spacing: 0.5px;
+  line-height: 25px;
+  font-weight: 400;
+  color: #3c9f8f;
+  text-decoration: underline;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.testimonial__link--bold {
+  font-weight: 700;
+}
+
+.testimonial__link:hover {
+  cursor: pointer;
+  opacity: 0.5;
 }
 
 .testimonial__testimonial-container {
@@ -320,6 +374,32 @@ body {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  background-color: #ffffff;
+  width: 320px;
+  border-radius: 7px;
+  -webkit-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+          box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  padding: 20px;
+  margin-top: 42px;
+}
+
+.testimonial__testimonial-icon {
+  width: 20px;
+}
+
+.testimonial__testimonial-paragraph {
+  color: #070439;
+  font-family: "Open Sans", sans-serif;
+  font-size: 12.5px;
+  text-decoration: none;
+  max-width: 520px;
+  letter-spacing: 0.5px;
+  line-height: 25px;
+  font-weight: 400;
+}
+
+.testimonial__testimonial-paragraph--bold {
+  font-weight: 700;
 }
 
 .testimonial__author-container {
@@ -336,6 +416,13 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 4px;
+}
+
+.testimonial__author-img {
+  width: 40px;
+  border-radius: 100%;
+  margin-right: 10px;
 }
 
 .testimonial__author-info {
@@ -346,12 +433,30 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.testimonial__author-name {
+  font-family: "Raleway", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  margin: 0 0 2px;
+}
+
+.testimonial__author-title {
+  font-family: "Raleway", sans-serif;
+  font-size: 12.5px;
+  font-weight: 400;
+  margin: 0;
+}
+
+.testimonial__img {
+  width: 500px;
 }
 
 .cta {
