--- a/css/styles.scss
+++ b/css/styles.scss
@@ -8,6 +8,7 @@ $colors: (
   Light-grayish-blue: hsl(240, 75%, 98%),
   Light-gray: hsl(0, 0%, 75%),
   Red: #ff0000,
+  White: #ffffff,
 );
 
 $heading-font: "Raleway", sans-serif;
@@ -23,7 +24,7 @@ $body-font: "Open Sans", sans-serif;
   align-items: $align;
 }
 
-@mixin heading($heading-font-size: 35px) {
+@mixin heading($heading-font-size: 37px) {
   color: colors(Very-dark-blue);
   font-family: $heading-font;
   font-size: $heading-font-size;
@@ -128,7 +129,7 @@ body {
   &__link {
     @include paragraph(15.5px);
     font-family: $heading-font;
-    letter-spacing: 0.7px;
+    letter-spacing: 0.5px;
     margin: 0 20px;
     transition: 0.2s;
 
@@ -190,25 +191,91 @@ body {
 
 .testimonial {
   @include flex(column, flex-start, center);
+  background-color: color(Light-grayish-blue);
+  width: 100%;
+  padding: 90px 0;
 
   &__img-text-container {
     @include flex(row, flex-start, center);
   }
 
   &__text-container {
-    @include flex(column, flex-start, center);
+    @include flex(column, flex-start, flex-start);
+    margin-right: 50px;
+  }
+
+  &__heading {
+    @include heading();
+    margin-bottom: 35px;
+  }
+
+  &__paragraph {
+    @include paragraph(15px);
+    margin: 0 0 15px;
+  }
+
+  &__link {
+    @include paragraph();
+    color: color(Moderate-cyan);
+    text-decoration: underline;
+    transition: 0.2s;
+
+    &:hover {
+      cursor: pointer;
+      opacity: 0.5;
+    }
   }
 
   &__testimonial-container {
     @include flex(column, flex-start, flex-start);
+    background-color: color(White);
+    width: 320px;
+    border-radius: 7px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+      rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    padding: 20px;
+    margin-top: 42px;
+  }
+
+  &__testimonial-icon {
+    width: 20px;
+  }
+
+  &__testimonial-paragraph {
+    @include paragraph(12.5px);
   }
 
   &__author-container {
     @include flex(row, flex-start, center);
+    margin-top: 4px;
+  }
+
+  &__author-img {
+    width: 40px;
+    border-radius: 100%;
+    margin-right: 10px;
   }
 
   &__author-info {
-    @include flex(column, flex-start, center);
+    @include flex(column, center, flex-start);
+  }
+
+  &__author-name {
+    font-family: $heading-font;
+    font-size: 14px;
+    font-weight: 700;
+    margin: 0 0 2px;
+  }
+
+  &__author-title {
+    font-family: $heading-font;
+    font-size: 12.5px;
+    font-weight: 400;
+    margin: 0;
+  }
+
+  &__img {
+    width: 500px;
   }
 }
 
