--- a/css/styles.css
+++ b/css/styles.css
@@ -598,6 +598,9 @@ body {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  background-color: #070439;
+  color: #ffffff;
+  width: 100%;
 }
 
 .footer__columns-container {
@@ -630,5 +633,82 @@ body {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  margin: 100px 90px 50px 90px;
+}
+
+.footer__logo {
+  width: 120px;
+  -webkit-filter: brightness(0) invert(1);
+          filter: brightness(0) invert(1);
+  -webkit-transform: translate(100px, 75px);
+          transform: translate(100px, 75px);
+}
+
+.footer__icon-text-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__icon {
+  margin-right: 15px;
+}
+
+.footer__text {
+  color: #f6f6fe;
+  font-size: 15px;
+  font-family: "Open Sans", sans-serif;
+  margin: 10px 0;
+}
+
+.footer__text--link {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.footer__text--link:hover {
+  cursor: pointer;
+  color: #9fa0d5;
+}
+
+.footer__social-media-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__social-media-icon {
+  border: 1.5px solid #f6f6fe;
+  border-radius: 100%;
+  padding: 8px 11px;
+  margin: 0 20px 0 0;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.footer__social-media-icon:hover {
+  cursor: pointer;
+  color: #9fa0d5;
+  border-color: #9fa0d5;
 }
 /*# sourceMappingURL=styles.css.map */
